<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:iconTint="@color/white"
        android:id="@+id/watch_ad1"
        android:title="@string/ad"
        app:showAsAction="ifRoom"


        />

    <item
        android:id="@+id/play_game"
        android:title="@string/play_game"
        android:icon="@drawable/play"
        app:showAsAction="always"/>
    <item
        android:id="@+id/share_this_app"
        android:title="@string/share_this_app"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/rate_this_app"
        android:title="@string/rate_this_app"
        app:showAsAction="never"/>

    <item
        android:title="@string/our_store"
        android:id="@+id/out_store"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>



</menu>