<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/ad"
        android:id="@+id/game_ad"
        app:showAsAction="ifRoom"/>

    <item android:title="@string/share_this_app"
        android:id="@+id/share_app"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/rate_this_app"
        android:id="@+id/rate_app"
        app:showAsAction="withText"/>

    <item
        android:title="@string/our_store"
        android:id="@+id/out_store"
        app:showAsAction="withText"/>

    <item
        android:title="@string/about"
        android:id="@+id/about"
        app:showAsAction="withText"/>



</menu>