<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/bg_notify"
    android:layout_height="75dp">

    <ImageView
        android:id="@+id/image_thumbnail"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/music_item_image_view"
        android:scaleType="centerInside"
        android:src="@drawable/mu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/item_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/share_btn"
        app:layout_constraintStart_toEndOf="@+id/image_thumbnail"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/song_title_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:fontFamily="@font/nunito"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/no_track_found"
            android:textColor="@color/white"
            android:textSize="19sp" />


        <TextView

            android:id="@+id/song_artist_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:fontFamily="@font/nunito"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/info_not_found"
            android:textColor="@color/white"
            android:textSize="14sp" />


    </LinearLayout>

    <ImageButton
        android:id="@+id/share_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/share_song"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="2dp"-->
    <!--        android:background="@color/primaryColor"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/image_thumbnail"-->
    <!--/>-->


</androidx.constraintlayout.widget.ConstraintLayout>