<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/bg_notify">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/panel_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bg_notify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:contentDescription="@string/sliding_panel_image_view"
            android:id="@+id/imageView_sliding"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:background="@color/secondaryLightColor"
            android:src="@drawable/mu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_sliding"
            app:layout_constraintEnd_toStartOf="@+id/sliding_play_pause_btn"
            app:layout_constraintStart_toEndOf="@+id/imageView_sliding"
            app:layout_constraintTop_toTopOf="@+id/imageView_sliding">

            <TextView
                android:id="@+id/sliding_song_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:fontFamily="@font/nunito"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:text="@string/no_track_found" />

            <TextView
                android:id="@+id/sliding_song_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:fontFamily="@font/nunito"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:text="@string/info_not_found" />
        </LinearLayout>


        <ProgressBar
            android:id="@+id/sliding_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:contentDescription="@string/panel_sliding_play_pause_button"
            android:id="@+id/sliding_play_pause_btn"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_pasue_sliding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:contentDescription="@string/skip_prev"
        android:id="@+id/skip_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="80dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_skip_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageButton
        android:contentDescription="@string/main_play_pause_button"
        android:id="@+id/play_pause_main_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_pause_main"
        app:layout_constraintBottom_toBottomOf="@+id/skip_next"
        app:layout_constraintEnd_toStartOf="@+id/skip_next"
        app:layout_constraintStart_toEndOf="@+id/skip_prev"
        app:layout_constraintTop_toTopOf="@+id/skip_prev" />


    <ImageButton
        android:contentDescription="@string/skip_next"
        android:id="@+id/skip_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_skip_next"
        app:layout_constraintBottom_toBottomOf="@+id/skip_prev"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:progressTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/play_pause_main_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/curr_dur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_00_00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/total_dur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_00_00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/curr_dur"
        app:layout_constraintTop_toTopOf="@+id/curr_dur" />

    <TextView
        android:id="@+id/title_song_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="5dp"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:fontFamily="@font/nunito"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toStartOf="@+id/total_dur"
        app:layout_constraintStart_toEndOf="@+id/curr_dur"
        tools:text="@string/no_track_found"

        />

    <ProgressBar
        android:id="@+id/main_pbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="#304FFE"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/play_pause_main_btn"
        app:layout_constraintEnd_toStartOf="@+id/skip_next"
        app:layout_constraintStart_toEndOf="@+id/skip_prev"
        app:layout_constraintTop_toTopOf="@+id/play_pause_main_btn" />


    <ImageButton
        android:contentDescription="@string/shuffle_on_off"
        android:id="@+id/shuffle_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_shuffle_off"
        app:layout_constraintBottom_toTopOf="@+id/title_song_main"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:contentDescription="@string/song_repeatation"
        android:id="@+id/repeat_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_repeat"
        app:layout_constraintBottom_toBottomOf="@+id/shuffle_on_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toEndOf="@+id/shuffle_on_off"
        app:layout_constraintTop_toTopOf="@+id/shuffle_on_off"
        app:layout_constraintVertical_bias="0.0" />

    <!--    SHowing Native Ads Layout-->

    <FrameLayout
        android:id="@+id/ad_frame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@+id/shuffle_on_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>